<resources>
    <string name="app_name">Assignment_3-2</string>
    <string name="divide_with_0">Can\'t divide with 0</string>
    <string name="clear_button">AC</string>
    <string name="backspace_button">Back</string>
    <string name="display_hint">0</string>

    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="percent">%</string>
    <string name="division">÷</string>
    <string name="multiplication">×</string>
    <string name="subtraction">−</string>
    <string name="addition">+</string>

    <string name="number_0">0</string>
    <string name="number_00">00</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
</resources>