<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/calcDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="end"
        android:hint="@string/display_hint"
        android:textSize="36sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2,3">

        <TableRow>
            <Button
                android:text="@string/clear_button"
                android:onClick="onClearClick"/>
            <Button
                android:text="@string/percent"
                android:onClick="onOperatorClick"/>
            <Button
                android:text="@string/backspace_button"
                android:onClick="onBackSpaceClick"/>
            <Button
                android:text="@string/division"
                android:onClick="onOperatorClick"/>
        </TableRow>

        <TableRow>
            <Button
                android:text="@string/number_7"
                android:onClick="onNumberClick"/>
            <Button
                android:text="@string/number_8"
                android:onClick="onNumberClick"/>
            <Button
                android:text="@string/number_9"
                android:onClick="onNumberClick"/>
            <Button
                android:text="@string/multiplication"
                android:onClick="onOperatorClick"/>
        </TableRow>

        <TableRow>
            <Button
                android:text="@string/number_4"
                android:onClick="onNumberClick"/>
            <Button
                android:text="@string/number_5"
                android:onClick="onNumberClick"/>
            <Button
                android:text="@string/number_6"
                android:onClick="onNumberClick"/>
            <Button
                android:text="@string/subtraction"
                android:onClick="onOperatorClick"/>
        </TableRow>

        <TableRow>
            <Button
                android:text="@string/number_1"
                android:onClick="onNumberClick"/>
            <Button
                android:text="@string/number_2"
                android:onClick="onNumberClick"/>
            <Button
                android:text="@string/number_3"
                android:onClick="onNumberClick"/>
            <Button
                android:text="@string/addition"
                android:onClick="onOperatorClick"/>
        </TableRow>

        <TableRow>
            <Button
                android:text="@string/number_00"
                android:onClick="onNumberClick"/>
            <Button
                android:text="@string/number_0"
                android:onClick="onNumberClick"/>
            <Button
                android:text="@string/dot"
                android:onClick="onNumberClick"/>
            <Button
                android:text="@string/equals"
                android:onClick="onEqualClick"/>
        </TableRow>

    </TableLayout>
</LinearLayout>